--- a/build.xml
+++ b/build.xml
@@ -8,11 +8,12 @@
 	<property name="src.dir" value="src" />
 	<property name="bin.dir" value="bin" />
 	<property name="lib.dir" value="lib" />
-	<property name="jar.name" value="OpenFortranParserXml-0.1.0.jar" />
+	<property name="dist.dir" value="dist" />
+	<property name="jar.name" value="OpenFortranParserXML-0.1.0.jar" />
+	<property name="mainclass" value="fortran.ofp.Xml" />
 
 	<path id="ofp.classpath">
 		<pathelement location="bin" />
-		<!-- <pathelement location="resources" /> -->
 		<fileset dir="${lib.dir}" includes="*.jar" />
 	</path>
 
@@ -28,7 +29,6 @@
 				<exclude name="**/*.java" />
 			</fileset>
 		</copy>
-		<copy file="LICENSE" todir="${bin.dir}" />
 	</target>
 
 	<target name="build" depends="clean,init">
@@ -40,10 +40,12 @@
 	</target>
 
 	<target name="jar" depends="build">
-		<jar jarfile="${jar.name}" basedir="bin" includes="**/*.class">
+		<jar jarfile="${dist.dir}/${jar.name}" basedir="bin" includes="**/*.class">
 			<manifest>
-				<attribute name="Main-Class" value="fortran.ofp.Xml" />
+				<attribute name="Main-Class" value="${mainclass}" />
 			</manifest>
+			<metainf file="LICENSE" />
+			<metainf file="NOTICE" />
 		</jar>
 	</target>
 
