--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,6 @@ script:
 
 after_success:
   - python -m pylint --load-plugins=pylint.extensions.mccabe --docstring-min-length 5 --no-docstring-rgx "^(test)?_|.*Tests$" --unsafe-load-any-extension y --output-format colorized  --reports y $(find . -name "*.py")
-  - python -m coverage run --branch -m unittest discover --verbose
+  - python -m coverage run --branch --source . -m unittest discover --verbose
   - python -m coverage report --show-missing
   - coveralls
