--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
   - java -version
   - python --version
   - git clone "https://github.com/OpenFortranProject/open-fortran-parser" "../open-fortran-parser"
+  - git clone "https://github.com/mbdevpl/ffb-mini" "../ffb-mini" --branch ofp_tests
 
 install:
   # dependencies
