--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,7 @@
+include setup_boilerplate.py
+include requirements.txt
+include test_requirements.txt
+include dev_requirements.txt
 include LICENSE
 include NOTICE
 recursive-include test/examples *.*
