updated ignore rules for tests output

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -1,5 +1,4 @@
-/compatibility_failure
-/compatibility_success
-/ffbmini_failure
-/ffbmini_success
+/*_failure
+/*_success
+/*_disabled
 /transformations
