--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,9 @@ install:
   - export CLASSPATH="${CLASSPATH}:$(pwd)/lib/*"
   - ant
   - export CLASSPATH="${CLASSPATH}:$(pwd)/dist/*"
+  # Java tests
+  - wget "https://search.maven.org/remotecontent?filepath=org/jacoco/org.jacoco.agent/0.7.9/org.jacoco.agent-0.7.9-runtime.jar" -O "lib/org.jacoco.agent-0.7.9-runtime.jar"
+  - wget "https://oss.sonatype.org/content/repositories/snapshots/org/jacoco/org.jacoco.cli/0.7.10-SNAPSHOT/org.jacoco.cli-0.7.10-20170921.145522-19-nodeps.jar" -O "lib/org.jacoco.cli-0.7.10-20170921.145522-19-nodeps.jar"
 
 script:
   - TEST_PACKAGING=1 TEST_DEPENDENCIES=1 python -m coverage run --branch --source . -m unittest discover --verbose
@@ -43,6 +46,8 @@ script:
 after_success:
   - python -m coverage report --show-missing
   - coveralls
+  - java -jar "lib/org.jacoco.cli-0.7.10-20170921.145522-19-nodeps.jar" report "jacoco.exec" --classfiles "bin/" --csv "jacoco.csv" --html "jacoco/" --sourcefiles "src/"
+  - cat "jacoco.csv"
   - python -m pylint --load-plugins=pylint.extensions.mccabe --docstring-min-length 5 --no-docstring-rgx "^(test)?_|.*Tests$" --unsafe-load-any-extension y --output-format colorized  --reports y $(find . -name "*.py")
 
 notifications:
