--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,8 @@ before_install:
   - export PATH="${PATH}:$(pwd)/../open-fortran-compiler"
   # FFB-MINI app
   - git clone "https://github.com/mbdevpl/ffb-mini" "../ffb-mini" --branch ofp_tests
+  # miranda_io app
+  - git clone "https://github.com/mbdevpl/miranda_io" "../miranda_io"
 
 install:
   # dependencies
