--- a/build.xml
+++ b/build.xml
@@ -5,11 +5,23 @@
 	<property name="target" value="1.8" />
 	<property name="source" value="1.8" />
 
+	<loadfile srcfile="open_fortran_parser/_version.py" property="version">
+		<filterchain>
+			<linecontainsregexp>
+				<regexp pattern="^VERSION = '.+'.*$" />
+			</linecontainsregexp>
+			<tokenfilter>
+				<replaceregex pattern="^VERSION = '(.+)'.*$" replace="\1" />
+			</tokenfilter>
+			<striplinebreaks />
+		</filterchain>
+	</loadfile>
+
 	<property name="src.dir" value="src" />
 	<property name="bin.dir" value="bin" />
 	<property name="lib.dir" value="lib" />
 	<property name="dist.dir" value="dist" />
-	<property name="jar.name" value="OpenFortranParserXML-0.2.0.jar" />
+	<property name="jar.name" value="OpenFortranParserXML-${version}.jar" />
 	<property name="mainclass" value="fortran.ofp.Xml" />
 
 	<path id="ofp.classpath">
