--- a/.travis.yml
+++ b/.travis.yml
@@ -9,35 +9,35 @@ matrix:
     - os: linux
       language: python
       python: "3.6"
+      env: JDK=oraclejdk9
+    - os: linux
+      language: python
+      python: "3.6"
+      env: JDK=openjdk7
+    - os: linux
+      language: python
+      python: "3.6"
       env: JDK=openjdk8
     - os: linux
       language: python
       python: "3.6-dev"
-      env: JDK=oraclejdk8
-    - os: linux
-      language: python
-      python: "3.6-dev"
-      env: JDK=openjdk8
+      env: JDK=oraclejdk9
     - os: linux
       language: python
       python: "3.7-dev"
-      env: JDK=oraclejdk8
-    - os: linux
-      language: python
-      python: "3.7-dev"
-      env: JDK=openjdk8
+      env: JDK=oraclejdk9
     - os: osx
       language: generic
-      env: TRAVIS_PYTHON_VERSION="3.6.1"
-      jdk: oraclejdk8
+      env: TRAVIS_PYTHON_VERSION="3.6.2"
+      jdk: oraclejdk9
     - os: osx
       language: generic
       env: TRAVIS_PYTHON_VERSION="3.6-dev"
-      jdk: oraclejdk8
+      jdk: oraclejdk9
     - os: osx
       language: generic
       env: TRAVIS_PYTHON_VERSION="3.7-dev"
-      jdk: oraclejdk8
+      jdk: oraclejdk9
   allow_failures:
     - python: "3.6-dev"
     - python: "3.7-dev"
