actually setting envvar on osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,16 +28,19 @@ matrix:
       env: TRAVIS_JDK_VERSION=oraclejdk9
     - os: osx
       language: generic
-      env: TRAVIS_PYTHON_VERSION="3.6.2"
-      jdk: oraclejdk9
+      env:
+        - TRAVIS_PYTHON_VERSION="3.6.2"
+        - TRAVIS_JDK_VERSION=oraclejdk8
     - os: osx
       language: generic
-      env: TRAVIS_PYTHON_VERSION="3.6-dev"
-      jdk: oraclejdk9
+      env:
+        - TRAVIS_PYTHON_VERSION="3.6-dev"
+        - TRAVIS_JDK_VERSION=oraclejdk8
     - os: osx
       language: generic
-      env: TRAVIS_PYTHON_VERSION="3.7-dev"
-      jdk: oraclejdk9
+      env:
+        - TRAVIS_PYTHON_VERSION="3.7-dev"
+        - TRAVIS_JDK_VERSION=oraclejdk8
   allow_failures:
     - python: "3.6-dev"
     - python: "3.7-dev"
