--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ install:
   - pip install -U pip
   - pip install -U -r dev_requirements.txt
   # Java
-  - python open_fortran_parser/dev_dependencies.py
+  - python -m open_fortran_parser --dev-deps
   - export CLASSPATH="${CLASSPATH}:$(pwd)/lib/*"
   - ant
   - export CLASSPATH="${CLASSPATH}:$(pwd)/dist/*"
