--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,3 +57,9 @@ after_test:
   - python -m coverage report --show-missing
   - java -jar "lib\\org.jacoco.cli-0.7.10-20170927.171630-24-nodeps.jar" report "jacoco.exec" --classfiles "bin\\" --sourcefiles "src\\" --xml jacoco.xml
   - codecov
+
+artifacts:
+  - path: dist\*.jar
+  - path: dist\*.tar.gz
+  - path: dist\*.whl
+  - path: dist\*.zip
