--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,3 +63,15 @@ artifacts:
   - path: dist\*.tar.gz
   - path: dist\*.whl
   - path: dist\*.zip
+
+deploy:
+  - provider: BinTray
+    username: $(APPVEYOR_ACCOUNT_NAME)
+    api_key:
+      secure: cMLbWadS24XyCD5RU3XM+2GrgqtTfoBgKwkQXyDyVa/3QOF1rXheHki+BRXP5tLo
+    subject: $(APPVEYOR_ACCOUNT_NAME)
+    repo: pkgs
+    package: $(APPVEYOR_PROJECT_NAME)
+    version: 0.2.2.dev100.appveyor
+    publish: true
+    override: true
