--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,16 +2,28 @@ version: "{build}"
 
 environment:
   matrix:
-    - PYTHON: "C:\\Python36"
+    - ARCHITECTURE: "x86"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36"
+      JAVA_VERSION: "jdk7"
       JAVA: "C:\\Program Files (x86)\\Java\\jdk1.7.0"
       ANT: "1.9.9"
-    - PYTHON: "C:\\Python36-x64"
+    - ARCHITECTURE: "x64"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36-x64"
+      JAVA_VERSION: "jdk7"
       JAVA: "C:\\Program Files\\Java\\jdk1.7.0"
       ANT: "1.9.9"
-    - PYTHON: "C:\\Python36"
+    - ARCHITECTURE: "x86"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36"
+      JAVA_VERSION: "jdk8"
       JAVA: "C:\\Program Files (x86)\\Java\\jdk1.8.0"
       ANT: "1.10.1"
-    - PYTHON: "C:\\Python36-x64"
+    - ARCHITECTURE: "x64"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36-x64"
+      JAVA_VERSION: "jdk8"
       JAVA: "C:\\Program Files\\Java\\jdk1.8.0"
       ANT: "1.10.1"
 
@@ -57,12 +69,19 @@ after_test:
   - python -m coverage report --show-missing
   - java -jar "lib\\org.jacoco.cli-0.7.10-20170927.171630-24-nodeps.jar" report "jacoco.exec" --classfiles "bin\\" --sourcefiles "src\\" --xml jacoco.xml
   - codecov
+  # Bintray artifact preparation
+  - pip install version_query
+  - for /f %%i in ('python -m version_query -p .') do set VERSION=%%i
+  - set PLATFORM=windows%ARCHITECTURE%-%JAVA_VERSION%-python%PYTHON_VERSION%
+  - ps: Invoke-WebRequest "https://gist.githubusercontent.com/mbdevpl/cdbc3dab3ae1941870dcaa5bb1b358bc/raw/appveyor_bintray_packager.py" -OutFile "appveyor_bintray_packager.py"
+  - python appveyor_bintray_packager.py %VERSION% %PLATFORM% dist\*.jar dist\*.tar.gz dist\*.whl dist\*.zip
 
 artifacts:
   - path: dist\*.jar
   - path: dist\*.tar.gz
   - path: dist\*.whl
   - path: dist\*.zip
+  - path: '*-bintray.zip'
 
 deploy:
   - provider: BinTray
@@ -72,6 +91,8 @@ deploy:
     subject: $(APPVEYOR_ACCOUNT_NAME)
     repo: pkgs
     package: $(APPVEYOR_PROJECT_NAME)
-    version: 0.2.2.dev100.appveyor
+    version: $(VERSION)
     publish: true
     override: true
+    explode: true
+    artifact: /.*-bintray\.zip/
