--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,12 @@ matrix:
   allow_failures:
     - python: "3.6-dev"
     - python: "3.7-dev"
-    - env: TRAVIS_PYTHON_VERSION="3.6-dev"
-    - env: TRAVIS_PYTHON_VERSION="3.7-dev"
+      env:
+        - TRAVIS_PYTHON_VERSION="3.6-dev"
+        - TRAVIS_JDK_VERSION=oraclejdk8
+      env:
+        - TRAVIS_PYTHON_VERSION="3.7-dev"
+        - TRAVIS_JDK_VERSION=oraclejdk8
 
 before_install:
   - |
