--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,18 @@ version: "{build}"
 environment:
   matrix:
     - ARCHITECTURE: "x86"
+      PYTHON_VERSION: "3.5"
+      PYTHON: "C:\\Python35"
+      JAVA_VERSION: "jdk8"
+      JAVA: "C:\\Program Files (x86)\\Java\\jdk1.8.0"
+      ANT: "1.10.1"
+    - ARCHITECTURE: "x64"
+      PYTHON_VERSION: "3.5"
+      PYTHON: "C:\\Python35-x64"
+      JAVA_VERSION: "jdk8"
+      JAVA: "C:\\Program Files\\Java\\jdk1.8.0"
+      ANT: "1.10.1"
+    - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.6"
       PYTHON: "C:\\Python36"
       JAVA_VERSION: "jdk7"
