--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,12 @@ install:
   - wget "https://github.com/mbdevpl/open-fortran-parser-xml/releases/download/v0.2.0/org.jacoco.cli-0.7.10-20170927.171630-24-nodeps.jar" -O "lib/org.jacoco.cli-0.7.10-20170927.171630-24-nodeps.jar"
 
 script:
-  - TEST_PACKAGING=1 TEST_DEPENDENCIES=1 TEST_LONG=1 TEST_COVERAGE=1 python -m coverage run --branch --source . -m unittest discover --verbose
+  - |
+    if [[ "${TRAVIS_JDK_VERSION}" == "oraclejdk9" ]]; then
+      export TEST_DEPENDENCIES=1
+      export TEST_LONG=1
+    fi
+  - TEST_PACKAGING=1 TEST_COVERAGE=1 python -m coverage run --branch --source . -m unittest discover --verbose
 
 after_success:
   - python -m coverage report --show-missing
