--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,7 +59,7 @@ init:
   - set PATH=C:\\apache-ant-%ANT%\\bin;%PATH%
 
 install:
-  - pip install -U pip
+  - pip install -U pip || pip --version
   - pip install -U -r dev_requirements.txt
   # Java
   - python -m open_fortran_parser --dev-deps
