--- a/.travis.yml
+++ b/.travis.yml
@@ -27,28 +27,25 @@ matrix:
       python: "3.7-dev"
       env: TRAVIS_JDK_VERSION=oraclejdk9
     - os: osx
+      osx_image: xcode9.2
       language: generic
       env:
         - TRAVIS_PYTHON_VERSION="3.5.5"
         - TRAVIS_JDK_VERSION=oraclejdk8
     - os: osx
+      osx_image: xcode9.2
       language: generic
       env:
         - TRAVIS_PYTHON_VERSION="3.6.6"
         - TRAVIS_JDK_VERSION=oraclejdk8
     - os: osx
+      osx_image: xcode9.2
       language: generic
       env:
         - TRAVIS_PYTHON_VERSION="3.7-dev"
         - TRAVIS_JDK_VERSION=oraclejdk8
   allow_failures:
     - python: "3.7-dev"
-    - env:
-        - TRAVIS_PYTHON_VERSION="3.5.5"
-        - TRAVIS_JDK_VERSION=oraclejdk8
-    - env:
-        - TRAVIS_PYTHON_VERSION="3.6.6"
-        - TRAVIS_JDK_VERSION=oraclejdk8
     - env:
         - TRAVIS_PYTHON_VERSION="3.7-dev"
         - TRAVIS_JDK_VERSION=oraclejdk8
