--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Bintray deployment
-/travis_bintray_descriptor_gen.py
-/.bintray.json
-
 # Eclipse
 /.settings
 /.*project
@@ -11,10 +7,13 @@
 /.externalToolBuilders
 *.class
 
-# Java coverage
+# Java: coverage
 /jacoco
 /jacoco.exec
 /jacoco.xml
+
+# OS: macOS
+.DS_Store
 
 # Python
 /build
@@ -25,9 +24,8 @@ __pycache__
 *.egg-info
 *.pyc
 
-# Python coverage
+# Python: coverage
 /htmlcov
-/coverage.xml
 /.coverage
 
 # other
