--- a/logging.properties
+++ b/logging.properties
@@ -5,7 +5,7 @@ java.util.logging.ConsoleHandler.level = FINE
 
 java.util.logging.FileHandler.level = FINER
 java.util.logging.FileHandler.level = formatter
-java.util.logging.FileHandler.limit = 536870912
+java.util.logging.FileHandler.limit = 524288
 java.util.logging.FileHandler.count = 100
 java.util.logging.FileHandler.pattern = test/results/logs/parser_%g.log
 java.util.logging.FileHandler.append = true
