--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,7 @@ install:
   # Java
   - python -m open_fortran_parser --dev-deps
   - export CLASSPATH="${CLASSPATH}:$(pwd)/lib/*"
-  - ant
+  - ant -Dpython=python
   - export CLASSPATH="${CLASSPATH}:$(pwd)/dist/*"
   # Java tests
   - wget "https://github.com/mbdevpl/open-fortran-parser-xml/releases/download/v0.2.0/org.jacoco.agent-0.8.1-runtime.jar" -O "lib/org.jacoco.agent-0.8.1-runtime.jar"
