changed log format

--- a/logging.properties
+++ b/logging.properties
@@ -1,10 +1,12 @@
 handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 .level = FINEST
 
+java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
+
 java.util.logging.ConsoleHandler.level = FINE
+java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 java.util.logging.FileHandler.level = FINER
-java.util.logging.FileHandler.level = formatter
 java.util.logging.FileHandler.limit = 524288
 java.util.logging.FileHandler.count = 100
 java.util.logging.FileHandler.pattern = test/results/logs/parser_%g.log
