--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,6 +75,8 @@ init:
   #- set PATH=%PATH%;%cd%\\..\\open-fortran-compiler
   # FFB-MINI app
   - git clone "https://github.com/mbdevpl/ffb-mini" "..\\ffb-mini" --branch ofp_tests
+  # FLASH 5 app
+  - git clone "https://github.com/ECP-Astro/FLASH5.git" "..\\flash5"
   # miranda_io app
   - git clone "https://github.com/mbdevpl/miranda_io" "..\\miranda_io"
   # ant
