--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,14 +5,14 @@ environment:
     - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.5"
       PYTHON: "C:\\Python35"
-      JAVA_VERSION: "jdk8"
-      JAVA: "C:\\Program Files (x86)\\Java\\jdk1.8.0"
+      JAVA_VERSION: "jdk9"
+      JAVA: "C:\\Program Files (x86)\\Java\\jdk9"
       ANT: "1.10.5"
     - ARCHITECTURE: "x64"
       PYTHON_VERSION: "3.5"
       PYTHON: "C:\\Python35-x64"
-      JAVA_VERSION: "jdk8"
-      JAVA: "C:\\Program Files\\Java\\jdk1.8.0"
+      JAVA_VERSION: "jdk9"
+      JAVA: "C:\\Program Files\\Java\\jdk9"
       ANT: "1.10.5"
     - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.6"
@@ -39,16 +39,28 @@ environment:
       JAVA: "C:\\Program Files\\Java\\jdk1.8.0"
       ANT: "1.10.5"
     - ARCHITECTURE: "x86"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36"
+      JAVA_VERSION: "jdk9"
+      JAVA: "C:\\Program Files (x86)\\Java\\jdk9"
+      ANT: "1.10.5"
+    - ARCHITECTURE: "x64"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36-x64"
+      JAVA_VERSION: "jdk9"
+      JAVA: "C:\\Program Files\\Java\\jdk9"
+      ANT: "1.10.5"
+    - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.7"
       PYTHON: "C:\\Python37"
-      JAVA_VERSION: "jdk8"
-      JAVA: "C:\\Program Files (x86)\\Java\\jdk1.8.0"
+      JAVA_VERSION: "jdk9"
+      JAVA: "C:\\Program Files (x86)\\Java\\jdk9"
       ANT: "1.10.5"
     - ARCHITECTURE: "x64"
       PYTHON_VERSION: "3.7"
       PYTHON: "C:\\Python37-x64"
-      JAVA_VERSION: "jdk8"
-      JAVA: "C:\\Program Files\\Java\\jdk1.8.0"
+      JAVA_VERSION: "jdk9"
+      JAVA: "C:\\Program Files\\Java\\jdk9"
       ANT: "1.10.5"
 
 init:
@@ -86,8 +98,8 @@ build: off
 
 test_script:
   - set TEST_PACKAGING=1
-  - if [%JAVA_VERSION%]==[jdk8] set TEST_DEPENDENCIES=1
-  - if [%JAVA_VERSION%]==[jdk8] set TEST_LONG=1
+  - if [%JAVA_VERSION%]==[jdk7] set TEST_DEPENDENCIES=1
+  - if [%JAVA_VERSION%]==[jdk7] set TEST_LONG=1
   - set TEST_COVERAGE=1
   - python -m coverage run --branch --source . -m unittest -v
 
