--- a/appveyor.yml
+++ b/appveyor.yml
@@ -101,7 +101,7 @@ build: off
 test_script:
   - set TEST_PACKAGING=1
   - if [%JAVA_VERSION%]==[jdk7] set TEST_DEPENDENCIES=1
-  - if [%JAVA_VERSION%]==[jdk7] set TEST_LONG=1
+  #- if [%JAVA_VERSION%]==[jdk7] set TEST_LONG=1
   - set TEST_COVERAGE=1
   - python -m coverage run --branch --source . -m unittest -v
 
