--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,6 +51,30 @@ environment:
       JAVA: "C:\\Program Files\\Java\\jdk9"
       ANT: "1.10.5"
     - ARCHITECTURE: "x86"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36"
+      JAVA_VERSION: "jdk10"
+      JAVA: "C:\\Program Files (x86)\\Java\\jdk10"
+      ANT: "1.10.5"
+    - ARCHITECTURE: "x64"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36-x64"
+      JAVA_VERSION: "jdk10"
+      JAVA: "C:\\Program Files\\Java\\jdk10"
+      ANT: "1.10.5"
+    - ARCHITECTURE: "x86"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36"
+      JAVA_VERSION: "jdk11"
+      JAVA: "C:\\Program Files (x86)\\Java\\jdk11"
+      ANT: "1.10.5"
+    - ARCHITECTURE: "x64"
+      PYTHON_VERSION: "3.6"
+      PYTHON: "C:\\Python36-x64"
+      JAVA_VERSION: "jdk11"
+      JAVA: "C:\\Program Files\\Java\\jdk11"
+      ANT: "1.10.5"
+    - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.7"
       PYTHON: "C:\\Python37"
       JAVA_VERSION: "jdk9"
