--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,7 @@ install:
   - pip install -U pip
   - pip install -U -r dev_requirements.txt
   # Java
-  - python -m open_fortran_parser --dev-deps
+  - python -m open_fortran_parser --deps
   - export CLASSPATH="${CLASSPATH}:$(pwd)/lib/*"
   - ant -Dpython=python
   - export CLASSPATH="${CLASSPATH}:$(pwd)/dist/*"
