--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ before_install:
 install:
   # dependencies
   - pip install -U pip
-  - pip install -U -r dev_requirements.txt
+  - pip install -U -r ci_requirements.txt
   # Java
   - python -m open_fortran_parser --deps
   - export CLASSPATH="${CLASSPATH}:$(pwd)/lib/*"
