--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,5 @@
 include setup_boilerplate.py
-include requirements.txt
-include test_requirements.txt
-include dev_requirements.txt
+include *requirements.txt
 include LICENSE
 include NOTICE
 include ./open_fortran_parser/*.jar
