update used Ant version on AppVeyor
also, use Apache archives so that links won't expire so soon

fixes #11

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,61 +7,61 @@ environment:
       PYTHON: "C:\\Python35"
       JAVA_VERSION: "jdk7"
       JAVA: "C:\\Program Files (x86)\\Java\\jdk1.7.0"
-      ANT: "1.9.13"
+      ANT: "1.9.14"
     - ARCHITECTURE: "x64"
       PYTHON_VERSION: "3.5"
       PYTHON: "C:\\Python35-x64"
       JAVA_VERSION: "jdk7"
       JAVA: "C:\\Program Files\\Java\\jdk1.7.0"
-      ANT: "1.9.13"
+      ANT: "1.9.14"
     - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.6"
       PYTHON: "C:\\Python36"
       JAVA_VERSION: "jdk8"
       JAVA: "C:\\Program Files (x86)\\Java\\jdk1.8.0"
-      ANT: "1.10.5"
+      ANT: "1.10.7"
     - ARCHITECTURE: "x64"
       PYTHON_VERSION: "3.6"
       PYTHON: "C:\\Python36-x64"
       JAVA_VERSION: "jdk8"
       JAVA: "C:\\Program Files\\Java\\jdk1.8.0"
-      ANT: "1.10.5"
+      ANT: "1.10.7"
     - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.6"
       PYTHON: "C:\\Python36"
       JAVA_VERSION: "jdk9"
       JAVA: "C:\\Program Files (x86)\\Java\\jdk9"
-      ANT: "1.10.5"
+      ANT: "1.10.7"
     - ARCHITECTURE: "x64"
       PYTHON_VERSION: "3.6"
       PYTHON: "C:\\Python36-x64"
       JAVA_VERSION: "jdk9"
       JAVA: "C:\\Program Files\\Java\\jdk9"
-      ANT: "1.10.5"
+      ANT: "1.10.7"
     - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.6"
       PYTHON: "C:\\Python36"
       JAVA_VERSION: "jdk10"
       JAVA: "C:\\Program Files (x86)\\Java\\jdk10"
-      ANT: "1.10.5"
+      ANT: "1.10.7"
     - ARCHITECTURE: "x64"
       PYTHON_VERSION: "3.6"
       PYTHON: "C:\\Python36-x64"
       JAVA_VERSION: "jdk10"
       JAVA: "C:\\Program Files\\Java\\jdk10"
-      ANT: "1.10.5"
+      ANT: "1.10.7"
     - ARCHITECTURE: "x86"
       PYTHON_VERSION: "3.7"
       PYTHON: "C:\\Python37"
       JAVA_VERSION: "jdk11"
       JAVA: "C:\\Program Files (x86)\\Java\\jdk11"
-      ANT: "1.10.5"
+      ANT: "1.10.7"
     - ARCHITECTURE: "x64"
       PYTHON_VERSION: "3.7"
       PYTHON: "C:\\Python37-x64"
       JAVA_VERSION: "jdk11"
       JAVA: "C:\\Program Files\\Java\\jdk11"
-      ANT: "1.10.5"
+      ANT: "1.10.7"
 
 init:
   - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
@@ -80,7 +80,7 @@ init:
   # miranda_io app
   - git clone "https://github.com/mbdevpl/miranda_io" "..\\miranda_io"
   # ant
-  - ps: Invoke-WebRequest "https://www.apache.org/dist/ant/binaries/apache-ant-$Env:ANT-bin.zip" -OutFile "..\\apache-ant-$Env:ANT-bin.zip"
+  - ps: Invoke-WebRequest "https://archive.apache.org/dist/ant/binaries/apache-ant-$Env:ANT-bin.zip" -OutFile "..\\apache-ant-$Env:ANT-bin.zip"
   - ps: Expand-Archive -Path "..\\apache-ant-$Env:ANT-bin.zip" -DestinationPath "C:\\"
   - set PATH=C:\\apache-ant-%ANT%\\bin;%PATH%
 
